# pelister-lang

./: .gitignore  CMakeLists.txt  README.md
programs/: bubble_sort.peli  circle_area.peli  f_to_c.peli  fibonacci.peli  find_max.peli  sign.peli  stack_play.peli  sum_of_squares.peli
src/: main.cpp
src/app/: CMakeLists.txt  main.cpp
src/pelister_lib/: AstVisualizer.cpp  AstVisualizer.hpp  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
test/: CMakeLists.txt  interpreter_test.cpp  lexer_test.cpp  parser_test.cpp
