cmake_minimum_required(VERSION 3.14)
project(pelister-lang VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src/pelister_lib)
add_subdirectory(src/app)

enable_testing()
add_subdirectory(test)
